--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
+    "react-joyride": "^3.0.0-7",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.0.17"
   },
